Attempt to fix background sizing on mobile version

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -19,6 +19,7 @@ body {
   min-width: 100%;
   width: 100%;
   min-height: 100%;
+  height: 100%;
   z-index: 1;
   font-family: Didot !important;
 }
@@ -242,16 +243,8 @@ button > a, button > a:hover {
 }
 .buy-button {
   margin-top: 50%;
-  /* left: 50%;
-  top: 50%; */
   width: 200px;
-  /* margin-left: -124px; */
 }
-/* .buy-button:hover, .buy-button:focus, .buy-button.hover, .buy-button.focus {
-  background-color: #2ac2ac;
-  color: #fff;
-  outline: none;
-} */
 .item-info {
   background-color: black;
   border-radius: 0 0 4px 4px;
